# PythonGPT

./: .gitignore  README.md  pyproject.toml
pythongpt/: __init__.py  gpt.py
