[project]
name = "pythongpt"
version = "1.0.0"
description = "A project for natural language programming."
authors = [
    {name = "Leonardo Mieschendahl", email = "miesschendahl.leonardo@gmail.com"}
]
dependencies = [
    'openai >=1.83.0, <2.0.0',
    'NaturalPy @ git+https://github.com/Mieschendahl/NaturalPy.git'
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
