[project]
name = "pythongpt"
version = "1.0.0"
description = "A project for natural language programming. (ChatGPT Version)"
authors = [
    {name = "Leonardo Mieschendahl", email = "miesschendahl.leonardo@gmail.com"}
]
dependencies = [
    'PromptGPT @ git+https://github.com/Mieschendahl/PromptGPT.git',
    'NaturalPy @ git+https://github.com/Mieschendahl/NaturalPy.git'
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
